# micropy-node

./: .editorconfig  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  Pipfile  README.md  pyproject.toml
senceit-ctrl/: .dockerignore  Dockerfile  docker-compose.yml
senceit-node/: .gitignore  Makefile  pyproject.toml
senceit-node/src/: app_config.py  app_run.py  device_mode.py  esp8266.py  esp_io.py  main.py  stepper.py  uhttp.py  util.py
senceit-node/test/: config.json  request1.txt  request4.txt  test_config.py  test_measurements.py  test_webserver.py
senceit-node/www/: 404.html
senceit-node/www/js/: scripts.js
src/: app_config.py  app_run.py  config.json  config.py  device_mode.py  esp8266.py  esp_io.py  io.py  main.py  uhttp.py  ultrasonic.py  webserver.py
test/: __init__.py  config.json  device_mode.py  mock_rest_api.py  mocks.py  request1.txt  request2.txt  request3.txt  test_config.py  test_http.py  test_measurements.py  test_util.py  test_webserver.py
www/: index.html
www/css/: 404.css  style.css
www/js/: scripts.js
