[tool.poetry]
name = "sensornode"
version = "0.1.0"
description = "Generic Wifi IoT Node"
authors = ["Niel Swart <niel@nielswart.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
